--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -6,6 +6,13 @@
 == 2009-05-07 ==
 
 === 会前准备 ===
-=== 李波 ===
+==== 李波 ====
   # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6605 SPR-6605] : sim3-failure while cal. product upload testing; getVersions(pref) fails for dbp.
   # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6606 SCR-6606] : SIMS#3: not able to set cache to be used in offline mode
+==== 李晶晶 ====
+  # 
+
+=== 会议记录 ===
+  # 
+
+=== 下次会议安排 ===
