Edited wiki page through web user interface.

--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -7,7 +7,7 @@ Weekly teleconf minutes
 === Pre-meeting ===
 ==== Bo ====
   # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6762 SPR-6762] : cache blocks usr from writing to a DbPool ; cannot be recovered in same session
-  # 
+  # HttpPool not working after ia.io updated(1.1.39)
 
 === Jingjing ===
 
