--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -9,7 +9,8 @@ Weekly teleconf minutes
 === Pre-meeting ===
 ==== Bo ====
   # 0.2 [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6762 SPR-6762] : cache blocks usr from writing to a DbPool ; cannot be recovered in same session 
-  # 0.5 HttpPool not working after ia.io updated(1.1.39)
+  # 0.5 Testing only. HttpPool not working after ia.io updated(1.1.39)
+    [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6777 SPR-6777] : HttpPool not working
   # 0.5 [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6701 SPR-6701] : Performance of PAL Context Rules mechanism
   # Todo: Create an SCR for lstore performance...
 
