--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -16,7 +16,7 @@ Weekly teleconf minutes
   # Create an SCR for lstore performance... SCR-6842	General Lstore Performance
 
 === Jingjing ===
-  # 
+  # SPR-6666 Over Plotter Single Layer Mode Problem
 
 
 ----
