--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -21,6 +21,8 @@ Weekly teleconf minutes
 
 === Meeting mimutes ===
 ==== PAL ===
+  # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6743 SPR-6743] : cannot instantiate a cache pool offline
+  # Try to deliver [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6842 SCR-6842] : General Lstore Performance  before next code freeze.
 
 
 ----
