--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -5,6 +5,14 @@ Weekly teleconf minutes
 
 ----
 
+== 2009-05-27 ==
+=== Pre-meeting ===
+==== Bo ====
+  # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6316 SCR-6316 & 6766 & 6767] : Naming convention for exported FITS files
+  # 1.0md Done [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6743 SPR-6743] : cannot instantiate a cache pool offline
+
+----
+
 == 2009-05-21 ==
 === Pre-meeting ===
 ==== Bo ====
