--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -2,6 +2,8 @@
 = Weekly teleconf minutes =
 
 ----
+== 2009-06-04 15：30 ==
+
 
 == 2009-05-27 ==
 === Pre-meeting ===
@@ -14,6 +16,12 @@
 ==== Jingjing ====
   # SCR-5372 : plotting of time series
 
+=== Meeting mimutes ===
+==== PAL ===
+Next Action: 
+  # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=4436  SPR-4436] : Pool Schema Evolver Does not copy tags info
+  # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6842 SCR-6842] : General Lstore Performance
+==== Plot ====
 
 ----
 
