--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -21,11 +21,18 @@
   # SCR-5372 : plotting of time series
 
 === Meeting mimutes ===
+
+Maohai asked about the use of XTCE in herschel. Steve has no idea about it. 
+
 ==== PAL ===
+Bo reported the work items listed in above Pre-meeting. 
 Next Action: 
   # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=4436  SPR-4436] : Pool Schema Evolver Does not copy tags info
   # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6842 SCR-6842] : General Lstore Performance
 ==== Plot ====
+Jingjing reported the work items listed in above Pre-meeting. 
+Next Action: 
+  # 
 
 ----
 
