--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -11,7 +11,20 @@
 ==== Jingjing ====
   # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=5701 SCR-5701] PlotXY should understand astronomical coordinates
 
+=== Meeting mimutes === 
 
+==== PAL ===
+
+Bo reported the work items listed in above Pre-meeting section. 
+
+Next Action: 
+  # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6842 SCR-6842] : General Lstore Performance
+==== Plot ====
+
+Jingjing reported the work items listed in above Pre-meeting section. 
+
+Next Action: 
+  # 
 ----
 
 == 2009-05-27 ==
