Edited wiki page through web user interface.

--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -10,6 +10,24 @@
 
 ==== Jingjing ====
   # 
+
+=== Meeting mimutes === 
+
+==== PAL ===
+
+Bo reported the work items listed in above Pre-meeting section. 
+
+Next Action: 
+  #
+
+==== Plot ====
+
+Jingjing reported the work items listed in above Pre-meeting section. 
+
+Next Action: 
+  # 
+
+
 ----
 == 2009-06-04 15:30 ==
 === Pre-meeting ===
