--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -1,5 +1,4 @@
 #labels Phase-Implementation,notes,meetingminutes
-
 = Weekly teleconf minutes =
 
 == 2009-06-19 16:00 ==
@@ -24,7 +23,7 @@
 Bo reported the work items listed in above Pre-meeting section. 
 
 Next Action: 
-  #
+  # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=4186  SCR-4186] : Remove component SimplePool
 
 ==== Plot ====
 
