--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -2,6 +2,11 @@
 = Weekly teleconf minutes =
 
 == 2009-06-30 16:00 ==
+=== Bo ===
+# 1md Done [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=7115 SPR-7115/SPR-7116] : URGENT: cached pool does not work with any context product?
+
+[http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=7151 SPR-7151] : SimplePool still present in ia_pal documentation
+
 
 == 2009-06-19 16:00 ==
 ==== Bo ====
