--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -19,7 +19,7 @@
   # SCR-6842 also fix [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=6076 SPR-6076] : Unexpected behavior of setTag doubles the size of the pool. (Wait for confirm the requirement of versionned Tag could be dropped.)  
   # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=7115 SPR-7115] :URGENT: cached pool does not work with any context product?  (investigating...)
 ==== Jingjing ====
-  #   
+  # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=7062 SCR-7062] PlotXY should adapt HIPE preference framework (finish design, will implement next week.)
 
 ----
 
