--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -4,8 +4,8 @@
 == 2009-06-30 16:00 ==
 ==== Bo ====
   # 1md Done [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=7115 SPR-7115/SPR-7116] : URGENT: cached pool does not work with any context product?
-
   # 0.4md Done [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=7151 SPR-7151] : SimplePool still present in ia_pal documentation
+  # 0.1md Done [http://herschel.esac.esa.int/jira/browse/HCSS-6206 HCSS-6206]: Broken SW Documentation Chain in ia_pal_pool_serial 
 
 ==== Jingjing ====
   # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=7136 SPR-7136] PlotXY does not apply stored default values
