--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -18,7 +18,8 @@
 ==== Jingjing ====
   # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=7136 SPR-7136] PlotXY does not apply stored default values
   # [http://www.rssd.esa.int/herschel_webapps/servletsuite/ProblemReportServlet?area=hcss&mode=displaypr&id=7138 SPR-7138] All NaN date on histogram layer cause renderer failure
-
+  # HCSS-7180 invalid TeX string leave plot in batch mode
+  # HCSS-7062 PlotXY should adapt HIPE preference framework (STILL ON WORKING)
 ----
 
 
