--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -3,7 +3,11 @@
 
 == 2009-07-09 16:00 ==
 ==== Bo ====
-Pool Locked forever...
+  # 0.5md Done [http://herschel.esac.esa.int/jira/browse/HCSS-7277 HCSS-7277]: Tags API incomplete
+  # 0.2md 90% [http://herschel.esac.esa.int/jira/browse/HCSS-5460 HCSS-5460]: Poor feedback on errors
+
+
+
 ----
 
 == 2009-06-30 16:00 ==
