Edited wiki page through web user interface.

--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -4,8 +4,8 @@
 == 2009-07-09 16:00 ==
 ==== Bo ====
   # 0.5md Done [http://herschel.esac.esa.int/jira/browse/HCSS-7277 HCSS-7277]: Tags API incomplete
-  # 0.2md 90% [http://herschel.esac.esa.int/jira/browse/HCSS-5460 HCSS-5460]: Poor feedback on errors
-
+  # 0.5md Done [http://herschel.esac.esa.int/jira/browse/HCSS-5460 HCSS-5460]: Poor feedback on errors
+  # 0.1md 10% [http://herschel.esac.esa.int/jira/browse/HCSS-5189 HCSS-5189]: PoolManager/StorageManager: Specification of XML config files
 
 
 ----
