Edited wiki page through web user interface.

--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -8,6 +8,7 @@
   # 0.5md Done [http://herschel.esac.esa.int/jira/browse/HCSS-5189 HCSS-5189]: PoolManager/StorageManager: Specification of XML config files
   # 0.25md Done [http://herschel.esac.esa.int/jira/browse/HCSS-5131 HCSS-5131]: product browser exits with null pointer exception
   # 0.25md Done [http://herschel.esac.esa.int/jira/browse/HCSS-7346 HCSS-7346]: Take account of odNumber in file name
+  # 0.5md 50%for approach 1. [http://herschel.esac.esa.int/jira/browse/HCSS-4469 HCSS-4469]: provide mechanism to distribute and use a pool as a jar-file 
 
 ----
 
