--- a/wiki/DevNotes.wiki
+++ b/wiki/DevNotes.wiki
@@ -2,3 +2,4 @@
 
   * 检查是否有testsuite 使用suite.addTest(FitsProductImporterTest.suite());添加的， 最好用 ·suite.addTest(new TestSuite(StubStorageManagerTest.class));·
   * 检查是否有testsuite 使用了test.default, 貌似是由于这个机制覆盖了var.hcss.dir在coverage.properties的定义。最好不用test.default,  按需要在setup()中初始化所需configuration。
+  * 还不行就把这个suite挪到AllTests.suite()的最前面...
