Edited wiki page through web user interface.

--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -4,7 +4,12 @@
 == 2009-08-06 16:00 ==
 ==== Bo ====
 ===== Done =====
-  # 
+  # 4h 90% [http://herschel.esac.esa.int/jira/browse/HCSS-7476 HCSS-7476] :Current cache limiting strategy does not make sense
+  # 1h 100% d-tagged in 1.2 [http://herschel.esac.esa.int/jira/browse/HCSS-6842 HCSS-6842] : General Lstore Performance
+  # 2h 100% [http://herschel.esac.esa.int/jira/browse/HCSS-7644 HCSS-7644] :version number of observation contexts are always set to 0
+  # 1h 100% [http://herschel.esac.esa.int/jira/browse/HCSS-7642 HCSS-7642] :Cannot access Pools any more
+  # 0.25h 100% [http://herschel.esac.esa.int/jira/browse/HCSS-7604 HCSS-7604] :Delegated CachedPool setReadOnly status set wrongly
+  # 0.5h 100% [http://herschel.esac.esa.int/jira/browse/HCSS-7500 HCSS-7500] :Rollback of unapproved PAL changes
 
 == 2009-07-29 16:00 ==
 ==== Bo ====
