--- a/wiki/Weekly_teleconf.wiki
+++ b/wiki/Weekly_teleconf.wiki
@@ -15,7 +15,8 @@
   # HCSS-8217 ProductPool interface is ambiguous (and therefore implementations differ)
   # HCSS-8766 PAL should not execute add rules on children when loading a context
   # HCSS-8452 Migration of index data corrupts pool
-  # HCSS-6627 URN format /implementation/ assumes 32-bit instead of 64-bit identifiers
+  # HCSS-6627 URN format /implementation/ assumes 32-bit instead of 64-bit identifiers 
+      SG suggest to postpone this action until it's proved necessary as it require all existing lstores being updated.
 
 ==== Jingjing ====
 ===== Done =====
